==== 1.27.0 - YYYY/MM/DD

[float]
===== Features

[float]
===== Bug fixes

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.26.0]]
==== 1.26.0 - 2021/09/14

===== Potentially breaking changes
* If you rely on Database span subtype and use Microsoft SQL Server, the span subtype has been changed from `sqlserver`
to `mssql` to align with other agents.

[float]
===== Features
* Improved naming for Spring controllers - {pull}1906[#1906]
* ECS log reformatting improvements - {pull}1910[#1910]
** Automatically sets `service.node.name` in all log events if set through agent configuration
** Add `log_ecs_reformatting_additional_fields` option to support arbitrary fields in logs
** Automatically serialize markers as tags where relevant (log4j2 and logback)
* gRPC spans (client and server) can detect errors or cancellation through custom listeners - {pull}2067[#2067]
* Add `-download-agent-version` to the agent <<setup-attach-cli-usage-options, attach CLI tool options>>, allowing the
user to configure an arbitrary agent version that will be downloaded from maven and attached - {pull}1959[#1959]
* Add extra check to detect improper agent setup - {pull}2076[#2076]

[float]
===== Performance improvements
* Reduce GC time overhead caused by WeakReferences - {pull}2086[#2086], {pull}2081[#2081]
* Reduced memory overhead by a smarter type pool caching strategy - {pull}2102[#2102]. +
  The type pool cache improves the startup times by speeding up type matching
  (determining whether a class that's about to be loaded should be instrumented).
  Generally, the more types that are cached, the faster the startup. +
  The old strategy did not impose a limit to the cache but cleared it after it hasn't been accessed in a while.
  However, load test have discovered that the cache may never be cleared and leave a permanent overhead of 23mb.
  The actual size of the cache highly depends on the application and loosely correlates with the number of loaded classes. +