@@ -65,7 +65,6 @@ class TransactionContextTest {
             .withPathname("/p/a/t/h")
             .withSearch("?query=string");
         request.getSocket()
-            .withEncrypted(true)
             .withRemoteAddress("12.53.12.1");
         request.addHeader("user-agent", "Mozilla Chrome Edge");
         request.addHeader("content-type", "text/html");
